--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@
 .generated-data { border-bottom: 1px dashed #fff; }
 
 .portfolio-img-container {
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
   padding-bottom: 0.5em;
   position: relative;
